<resources>
    <string name="app_name">Clima Hoy</string>

    <string name="btnBuscarConsulta">Botón buscar</string>
    <string name="consultarBusqueda">Cuidad o Municipio</string>

    <!-- Menus -->
    <string name="menu_ajustes">Ajustes</string>
    <string name="key_Ajustes"> opc_Fichero </string>

    <string name="menu_ultimasconsultas">Ultimas Consultas</string>

    <string name="menu_acerca">Acerca de</string>
    <string name="menu_cerrar_sesion">Cerrar sesión</string>

    <string name="about_title">Acerca de Clima Hoy</string>
    <string name="about_message">Aplicación para consultar el clima actual en tu ciudad.</string>

    <!-- Ubicacion actual mostrada -->
    <string name="txtUbicacionActual"> 📍Ubicación... </string>
    <string name="txtDescripcionActual"> Descripción... </string>
    <string name="txtTemperaturaActual"> 0 °C </string>

    <!-- Preferencias -->
    <string name="title_Apariencia">APARIENCIA</string>
    <string name="title_ModoOscuro">Modo Oscuro</string>
    <string name="summary_ModoOscuro">Habilitar o deshabilitar el modo oscuro</string>

    <!-- Ultimas consultas -->
    <string name="title_ConsultasMeteo">🕓 Últimas consultas meteorológicas</string>


</resources>