<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".ui.activities.MainActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardClimaActual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvUbicacionActual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtUbicacionActual"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="4dp" />

                <TextView
                    android:id="@+id/tvDescripcionActual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtDescripcionActual"
                    android:textSize="14sp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/tvTemperaturaActual"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/txtTemperaturaActual"
                android:textSize="22sp"
                android:textStyle="bold"
                android:paddingStart="8dp" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/fila"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="16dp">

        <AutoCompleteTextView
            android:id="@+id/etConsultarClima"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:padding="12dp"
            android:inputType="textCapWords"
            android:completionThreshold="2"
            android:drawablePadding="8dp"
            android:hint="@string/consultarBusqueda"
            android:dropDownHeight="250dp"
            android:dropDownVerticalOffset="5dp"
            android:dropDownWidth="match_parent"
            android:scrollbars="vertical"
            android:singleLine="true" />

        <ImageButton
            android:id="@+id/btnBuscar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/btnBuscarConsulta"
            android:src="@android:drawable/ic_menu_search"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvRespuesta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </ScrollView>

</LinearLayout>